--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "material-design-icons-iconfont": "^4.0.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.3.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -55,6 +57,8 @@
     "semver": "^5.6.0",
     "shelljs": "^0.7.6",
     "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
