--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "material-design-icons-iconfont": "^4.0.2",
+    "node-modules": "^1.0.1",
+    "v-calendar": "^0.9.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.5"
