--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "mapbox-gl": "^0.51.0",
     "material-design-icons-iconfont": "^4.0.2",
     "node-modules": "^1.0.1",
     "v-calendar": "^0.9.7",
