--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bulma": "^0.7.2",
     "mapbox-gl": "^0.51.0",
     "material-design-icons-iconfont": "^4.0.2",
     "node-modules": "^1.0.1",
     "v-calendar": "^0.9.7",
     "vue": "^2.5.2",
+    "vue-js-modal": "^1.3.26",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.5"
   },
