--- a/Core/server/package.json
+++ b/Core/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bulma": "^0.7.2",
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "moment": "^2.22.2",
