--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -16,6 +16,7 @@
     "mapbox-gl": "^0.51.0",
     "material-design-icons-iconfont": "^4.0.2",
     "node-modules": "^1.0.1",
+    "randomcolor": "^0.5.3",
     "v-calendar": "^0.9.7",
     "vue": "^2.5.2",
     "vue-js-modal": "^1.3.26",
