--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
+    "latlon-geohash": "^1.1.0",
     "mapbox-gl": "^0.51.0",
     "material-design-icons-iconfont": "^4.0.2",
     "node-modules": "^1.0.1",
