--- a/Core/client/package.json
+++ b/Core/client/package.json
@@ -16,6 +16,7 @@
     "latlon-geohash": "^1.1.0",
     "mapbox-gl": "^0.51.0",
     "material-design-icons-iconfont": "^4.0.2",
+    "moment": "^2.23.0",
     "node-modules": "^1.0.1",
     "randomcolor": "^0.5.3",
     "v-calendar": "^0.9.7",
